@@ -1,13 +1,14 @@
 package ro.ubb.abc2024.arheo.controller.site;
 
 
-import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import ro.ubb.abc2024.arheo.domain.section.SectionStatus;
-import ro.ubb.abc2024.arheo.domain.site.SiteStatus;
 import ro.ubb.abc2024.arheo.utils.converter.SectionDtoConverter;
 import ro.ubb.abc2024.arheo.utils.converter.SiteConverterDto;
 import ro.ubb.abc2024.arheo.utils.dto.SectionDto;
@@ -16,33 +17,45 @@ import ro.ubb.abc2024.arheo.domain.site.Site;
 import ro.ubb.abc2024.arheo.service.SiteServiceImpl;
 import ro.ubb.abc2024.utils.dto.Result;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RequiredArgsConstructor
 @RestController
-@RequestMapping("${api.endpoint.base-url}/site")
-@SecurityRequirement(name = "bearerAuth")
+@RequestMapping("${api.endpoint.arheo}/site")
+//@SecurityRequirement(name = "bearerAuth")
 public class SiteController {
 
     private final SiteServiceImpl siteService;
     private final SiteConverterDto siteConverterDto;
     private final SectionDtoConverter sectionDtoConverter;
 
-    @GetMapping()
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
-    public Result<List<SiteDTO>> getSites(){
-        return new Result<>(true, HttpStatus.OK.value(), "Sites returned.", siteService.getAll().stream().map(siteConverterDto::createFromEntity).toList());
+    @GetMapping
+    public Result<Map<String,Object>> getSites(@RequestParam(required = false) String status,
+                                                   @RequestParam(defaultValue = "0") int page,
+                                                   @RequestParam(defaultValue = "10") int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Site> sitePage = siteService.getAllPaginatedByCriteria(status, pageable);
+        List<SiteDTO> siteDtoList = sitePage.getContent().stream().map(siteConverterDto::createFromEntity)
+                .collect(Collectors.toList());
+        Map<String, Object> response = new HashMap<>();
+        response.put("sites", siteDtoList);
+        response.put("currentPage", sitePage.getNumber());
+        response.put("totalItems", sitePage.getTotalElements());
+        response.put("totalPages", sitePage.getTotalPages());
+        return new Result<>(true, HttpStatus.OK.value(), "Retrieved all sites", response);
     }
 
     @GetMapping("{id}")
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
     public Result<SiteDTO> getSiteById(@PathVariable Long id){
         return new Result<>(true, HttpStatus.OK.value(), "Sites returned.", siteConverterDto.createFromEntity(siteService.getSite(id)));
     }
 
     @PostMapping()
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
+    @PreAuthorize("hasAnyAuthority('SCOPE_ARH', 'SCOPE_ADMIN')")
     public Result<SiteDTO> createSite(@RequestBody SiteDTO siteDTO){
         Site newSite=siteConverterDto.createFromDto(siteDTO);
         siteService.addSite(newSite);
@@ -50,59 +63,27 @@ public class SiteController {
     }
 
     @PutMapping()
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
+    @PreAuthorize("hasAnyAuthority('SCOPE_ARH', 'SCOPE_ADMIN')")
     public Result<SiteDTO> updateSite(@RequestBody SiteDTO siteDTO){
-        //Site updatedSite = siteConverterDto.createFromDto(siteDTO);
         siteService.updateSite(siteDTO.id(), siteDTO);
         return new Result<>(true, HttpStatus.OK.value(), "Site updated successfully.", siteDTO);
     }
 
     @DeleteMapping("{id}")
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
+    @PreAuthorize("hasAnyAuthority('SCOPE_ARH', 'SCOPE_ADMIN')")
     public Result<Boolean> deleteSite(@PathVariable Long id){
         siteService.deleteSite(id);
         return new Result<>(true, HttpStatus.OK.value(), "Site deleted successfully.", Boolean.TRUE);
     }
 
-    @GetMapping("/digging")
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
-    public Result<List<SiteDTO>> getDiggingSites(){
-        return new Result<>(true, HttpStatus.OK.value(), "Returned digging sites.", siteService.getAllByStatus(SiteStatus.DIGGING).stream().map(siteConverterDto::createFromEntity).toList());
-    }
-
-    @GetMapping("/analysis")
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
-    public Result<List<SiteDTO>> getAnalyzedSites(){
-        return new Result<>(true, HttpStatus.OK.value(), "Returned analyzed sites.", siteService.getAllByStatus(SiteStatus.ANALYSIS).stream().map(siteConverterDto::createFromEntity).toList());
-    }
-
-    @GetMapping("/completed")
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
-    public Result<List<SiteDTO>> getCompletedSites(){
-        return new Result<>(true, HttpStatus.OK.value(), "Returned completed sites.", siteService.getAllByStatus(SiteStatus.COMPLETED).stream().map(siteConverterDto::createFromEntity).toList());
-    }
-
-    @GetMapping("/incomplete")
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
-    public Result<List<SiteDTO>> getIncompleteSites(){
-        return new Result<>(true,
-                HttpStatus.OK.value(),
-                "Returned incomplete sites.",
-                Stream.concat(
-                        siteService.getAllByStatus(SiteStatus.DIGGING).stream().map(siteConverterDto::createFromEntity),
-                        siteService.getAllByStatus(SiteStatus.ANALYSIS).stream().map(siteConverterDto::createFromEntity))
-                        .toList()
-        );
-    }
-
     @GetMapping("/sections/{id}")
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
+    @PreAuthorize("hasAnyAuthority('SCOPE_ARH', 'SCOPE_ADMIN')")
     public Result<List<SectionDto>> getSectionsById(@PathVariable long id){
         return new Result<>(true, HttpStatus.OK.value(), "Returned all sections.", siteService.getSectionsBySiteId(id).stream().map(sectionDtoConverter::createFromEntity).toList());
     }
 
     @GetMapping("sections_incomplete/{id}")
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
+    @PreAuthorize("hasAnyAuthority('SCOPE_ARH', 'SCOPE_ADMIN')")
     public Result<List<SectionDto>> getIncompleteSectionsBySiteId(@PathVariable long id){
         return new Result<>(true,
                 HttpStatus.OK.value(),
@@ -116,14 +97,12 @@ public class SiteController {
 
     //todo: complete endpoint when done artifacts
     /*@GetMapping("artifacts/{id}")
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
     public Result<List<ArtifactDto>> getArtifactsBySiteId(@PathVariable long id){
 
     }*/
 
     //todo: complete endpoint when done artifacts
     /*@GetMapping("artifacts")
-    @PreAuthorize("hasAnyAuthority('SCOPE_ADMIN', 'SCOPE_ARHEO', 'SCOPE_LABWORKER')")
     public Result<List<SectionDto>> getArtifactsBySiteIdAndArchaeologist(@RequestBody Long siteId,
                                                                          @RequestBody Long archaeologistId){
 
